# watsonx-mlops-model-monitor

./: .env.example  .gitignore  Dockerfile  LICENSE  Makefile  README.md  docker-compose.yml  pyproject.toml  requirements-dev.txt  requirements.txt
.github/workflows/: ci.yml
config/: settings.yaml
docs/: architecture.md
k8s/: deployment.yaml  service.yaml
notebooks/: 01_mlops_demo.ipynb
src/: __init__.py  config.py
src/monitoring/: __init__.py  alert_engine.py  drift_detector.py  fairness_monitor.py  performance_tracker.py
src/registry/: __init__.py  model_registry.py  versioning.py
src/serving/: __init__.py  ab_router.py  gateway.py  shadow_mode.py
src/training/: __init__.py  experiment.py  hyperopt.py  trainer.py
tests/: __init__.py  test_drift_detector.py  test_fairness_monitor.py  test_registry.py  test_serving.py  test_training.py
